# conductor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRINCIPLES.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
conductor/: __init__.py  agent_manager.py  cli.py  db.py  github_monitor.py  guardrails.py  logger.py  models.py  planner.py  pr_lifecycle.py  quota_manager.py  rules_engine.py  server.py  task_manager.py  workspace_manager.py
conductor/static/: app.js  index.html  style.css
tests/: test_agent_manager.py  test_cli.py  test_core.py  test_db.py  test_github_monitor.py  test_guardrails_quota_rules.py  test_logger.py  test_models.py  test_planner.py  test_pr_lifecycle.py  test_server.py  test_task_manager.py  test_workspace_manager.py
